--- a/build.gradle
+++ b/build.gradle
@@ -18,18 +18,31 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	mapstructVersion = "1.5.3.Final"
+	lombokVersion = '1.18.24'
+	lombokMapstructBindingVersion = "0.2.0"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'org.apache.commons:commons-text:1.10.0'
-	implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.6.0'
 	implementation 'com.pivovarit:parallel-collectors:2.5.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	compileOnly 'org.springframework.boot:spring-boot-devtools'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
+
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
 	testImplementation 'junit:junit:4.13.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -38,6 +51,9 @@ dependencies {
 	testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:2.35.0"
 	testImplementation 'org.mockito:mockito-core:4.8.0'
 	testImplementation 'org.assertj:assertj-core:3.23.1'
+	testImplementation 'io.rest-assured:spring-mock-mvc:5.3.0'
+
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 tasks.named('test') {
