--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "setlist-to-playlist-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.11.15",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "flowbite": "^1.5.5",
-    "flowbite-react": "^0.3.7",
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
-  }
+	"name": "setlist-to-playlist-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@types/node": "18.11.15",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.9",
+		"eslint": "8.29.0",
+		"eslint-config-next": "13.0.6",
+		"flowbite": "^1.5.5",
+		"flowbite-react": "^0.3.7",
+		"next": "13.0.4",
+		"next-themes": "^0.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "4.9.4",
+		"usehooks-ts": "^2.9.1"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"autoprefixer": "^10.4.13",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"tailwindcss": "^3.2.4"
+	}
 }
