--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,11 @@
 		"@types/react-dom": "18.0.9",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
-		"flowbite": "^1.5.5",
-		"flowbite-react": "^0.3.7",
 		"next": "13.0.4",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"typescript": "4.9.4",
-		"usehooks-ts": "^2.9.1"
+		"typescript": "4.9.4"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -30,6 +27,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.1",
+		"prettier-plugin-tailwindcss": "^0.2.1",
 		"tailwindcss": "^3.2.4"
 	}
 }
