--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -10,3 +10,8 @@ spotify:
 
 springdoc.api-docs.path: /api-docs
 server.error.include-message: always
+
+server.error.whitelabel.enabled: false
+spring:
+  autoconfigure:
+    exclude: 'org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration'
