--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
 		"@types/react-dom": "18.0.9",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
-		"next": "^13.0.4",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"sharp": "^0.31.2",
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
@@ -26,6 +26,7 @@
 		"autoprefixer": "^10.4.13",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"next": "^13.0.8-canary.2",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.1",
