--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'org.apache.commons:commons-text:1.10.0'
-	implementation 'org.seleniumhq.selenium:selenium-java:4.6.0'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.7.1'
 	implementation 'com.pivovarit:parallel-collectors:2.5.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -52,6 +52,7 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:4.8.0'
 	testImplementation 'org.assertj:assertj-core:3.23.1'
 	testImplementation 'io.rest-assured:spring-mock-mvc:5.3.0'
+	testImplementation 'org.testcontainers:testcontainers:1.17.6'
 
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
