Add Dockerfile + small fix on image generation

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 group = 'xyz.arnau'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+targetCompatibility = '17'
 
 configurations {
 	compileOnly {
