--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -15,7 +15,6 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -56,6 +55,8 @@ jobs:
         with:
           tag_prefix: api-v
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Save version as output
+        run: echo ${{ steps.tag_version.outputs.new_tag }} >> $VERSION
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
@@ -94,3 +95,14 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+        
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to Dokku
+        uses: dokku/github-action@master
+        with:
+          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/appname'
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          deploy_docker_image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build.outputs.VERSION }}
