--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -99,6 +99,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
+    environment: Production
     steps:
       - name: Deploy to Dokku
         uses: dokku/github-action@master
