--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -1,10 +1,4 @@
-name: Build Next.js app (web)
-
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: Build & Deploy Next.js app [web]
 
 on:
   push:
@@ -16,7 +10,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ArnauBlanch/setlist-to-playlist-web
+  IMAGE_NAME: arnaublanch/setlist-to-playlist-web
 
 
 jobs:
@@ -29,6 +23,8 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+    outputs:
+      IMAGE_VERSION: ${{ steps.tag_version.outputs.new_version }}
 
     steps:
       - name: Checkout repository
@@ -104,3 +100,15 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+        
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    environment: Production
+    steps:
+      - name: Deploy to Dokku
+        uses: dokku/github-action@master
+        with:
+          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/${{ secrets.WEB_APP_NAME }}'
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          deploy_docker_image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build.outputs.IMAGE_VERSION }}
