--- a/api/build.gradle
+++ b/api/build.gradle
@@ -27,13 +27,14 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.2'
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'org.apache.commons:commons-text:1.10.0'
 	implementation 'org.seleniumhq.selenium:selenium-java:4.7.1'
 	implementation 'com.pivovarit:parallel-collectors:2.5.0'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
@@ -49,7 +50,7 @@ dependencies {
 	testImplementation 'io.rest-assured:rest-assured:5.3.0'
 	testImplementation 'io.rest-assured:json-path:5.3.0'
 	testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:2.35.0"
-	testImplementation 'org.mockito:mockito-core:4.8.0'
+	testImplementation 'org.mockito:mockito-core:4.10.0'
 	testImplementation 'org.assertj:assertj-core:3.23.1'
 	testImplementation 'io.rest-assured:spring-mock-mvc:5.3.0'
 	testImplementation 'org.testcontainers:testcontainers:1.17.6'
