--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,20 +55,18 @@ jobs:
         # queries: security-extended,security-and-quality
 
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, Go, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
+    - if: matrix.language == 'javascript'
+      name: Autobuild JavaScript
       uses: github/codeql-action/autobuild@v2
-
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-
-    #   If the Autobuild fails above, remove it and uncomment the following three lines.
-    #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
-
-    # - run: |
-    #     echo "Run, Build Application using script"
-    #     ./location_of_script_within_repo/buildscript.sh
+      
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2.4.2
+      
+    - if: matrix.language == 'java'
+      name: Build Java
+      run: |
+          cd api
+          gradle build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
