--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,6 +59,11 @@ jobs:
       name: Autobuild JavaScript
       uses: github/codeql-action/autobuild@v2
       
+    - name: Setup Java 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        java-version: 17
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.4.2
       
